@@ -9,6 +9,8 @@ Version 4.0.5 (02-20-12)
 -Added a few IE related CSS fixes.
 -Responsive design tweaks.
 -Modified breadcrumb style, made them a page element and a templates option.
+-Removed archive title and search result text from templates.
+-Improved post index pagination.
 
 Version 4.0.4 (02-17-12)
 -Adjustment to Foundation JS calls to fix further plugin conflicts.
